--- a/src/html/02-heading-paragraph.html
+++ b/src/html/02-heading-paragraph.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <a href="/index.html">Index로 이동</a>
+    <!-- 숨김 제목 제공 (스크린리더 환경 고려) -->
+    <h1>카페W</h1>
+    <h1>카페 W 매장 찾기</h1>
+    <p>카페 W를 가까이에서 경험해보세요.</p>
+    <p>고객님과 가장 가까이 있는 매장을 찾아보세요.</p>
+    <hr />
     <h1>제목</h1>
     <h2>제목</h2>
     <h3>제목</h3>
@@ -16,10 +22,5 @@
     <h5>제목</h5>
     <h6>제목</h6>
     <p>단락</p>
-    <hr />
-    <!-- 숨김 제목 제공 (스크린리더 환경 고려) -->
-    <h1>카페W 매장 찾기</h1>
-    <p>카페 W를 가까이에서 경험해보세요.</p>
-    <p>고객님과 가장 가까이 있는 매장을 찾아보세요.</p>
   </body>
 </html>
