--- a/src/html/18-form-input.html
+++ b/src/html/18-form-input.html
@@ -28,4 +28,59 @@
             <button type="submit">전송</button>
         </fieldset>
     </form>
+    <hr />
+    <form action="https://formspree.io/f/xeqwwbwk">
+
+
+        <!-- search : 검색어 입력 서식 (HTML5에서 추가) -->
+    <div>
+    <label for="searchKeyword">검색어</label
+    ><input
+        type="search"
+        id="searchKeyword"
+        placeholder="검색어를 입력하세요"
+        name="keyword"
+    />
+    </div>
+        <!-- tel: 전화번호 입력 서식 (HTML5에서 추가) -->
+    <div>
+    <label for="userPhone">전화번호</label
+    ><input required type="tel" name="userPhone" id="userPhone" />
+    </div>
+    <!-- checkbox : 체크박스 서식 -->
+<div>
+  <input
+    type="checkbox"
+    checked
+    value="html"
+    name="bootcamp"
+    id="bootcampHtml"
+  />
+  <label for="bootcampHtml">HTML</label>
+</div>
+<div>
+  <input type="checkbox" value="css" name="bootcamp" id="bootcampCss" />
+  <label for="bootcampCss">CSS</label>
+</div>
+<!-- radio : 라디오 서식 -->
+ <!-- 암묵적인 레이블링 : 스크린 리더 이슈 때문에 권장하지 않음 -->
+<div>
+  <label>
+    <input type="radio" checked name="classRoom" value="classRoom1" />
+    회고 1팀
+  </label>
+</div>
+<div>
+  <label>
+    <input type="radio" name="classRoom" value="classRoom2" />
+    회고 2팀
+  </label>
+</div>
+    <!-- 버튼 (전속, 초기화, 일반버튼) -->
+    <div>
+    <input type="submit" value="전송" />
+    <input type="reset" value="초기화" />
+    <input type="button" value="버튼" />
+    </div>
+    </form>
 </html>
